# litestar-sqlspec-app

./: .env.example  Dockerfile  README.md  api.http  docker-compose.yml  pyproject.toml
src/: db.py  main.py  models.py  routes.py  symple_db.py
src/database/: docs_aiosqlite.db
src/migrations/: 20251111125634_init.sql  20251111134037_updatetask.sql  README_ja.md  __init__.py
